--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,8 +19,8 @@ jobs:
       - name: Log in to ghcr.io
         uses: redhat-actions/podman-login@v1
         with:
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
           registry: ghcr.io
 
       - name: Install qemu dependency
